# prototype_memo_bot

./: README.md  log.py  pyproject.toml  requirements.txt  settings.py
discord_app/: __init__.py  __main__.py  buttons.py  run_dis.py  slesh.py
discord_app/cogs/: buttons.py
notes/: idea.py  ideas.py
telegram_app/: __init__.py
telegram_app/callback_factory/: idea.py
telegram_app/handlers/: idea.py  start.py
telegram_app/keyboards/: idea.py
telegram_app/middlewares/: __init__.py
vk-app/: run_vk.py
webapp/: main.py
